bug-fix/dropdown-navbar

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -16,9 +16,9 @@
                             Meu Perfil
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="nav-link" routerLink="client/profile">Meus Dados</a></li>
-                            <li><a class="nav-link" routerLink="adm">AreaAdmin</a></li>
-                            <li><a class="nav-link" routerLink="client/login">Logout</a></li>
+                            <li><a class="nav-link">Meus Dados</a></li>
+                            <li><a class="nav-link">AreaAdmin</a></li>
+                            <li><a class="nav-link">Logout</a></li>
                         </ul>
                     </div>
                 </li>
