create autocadastro component

--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -1,1 +1,53 @@
-<p>autocadastro works!</p>
+<div>
+    <form action="" method="post">
+        <div class="card">
+            <div class="card-header">
+                <h3>Cadastro de Cliente</h3>
+            </div>
+            
+            
+            <div class="card-body">
+                <form [formGroup]="registerForm" action="#" method="post" id="loginForm">
+                    <label for="nameInput" class="form-label">Nome</label>
+                    <input type="text" formControlName="name" class="form-control">
+
+                    <label for="emailInput" class="form-label">Email</label>
+                    <input type="email" formControlName="email" class="form-control">
+
+                    <label for="cpfInput" class="form-label">CPF</label>
+                    <input type="text" formControlName="cpf" class="form-control">
+
+                    <label for="enderecoInput" class="form-label">Endereço</label>
+                    <input type="text" formControlName="address" class="form-control">
+                    <div>
+                        <label for="tipo" class="form-label">Tipo:</label>
+                        <select id="tipo" name="tipo" class="form-control"> 
+                            <option value="rua">Rua</option>
+                            <option value="avenida">Avenida</option>
+                            <option value="estrada">Estrada</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="logradouro">Logradouro:</label>
+                        <input type="text" formControlName="logradouro" class="form-control">
+                    </div>
+                    <div>
+                        <label for="numero">Número:</label>
+                        <input type="number" formControlName="numberHome" class="form-control">
+                    </div>
+
+                    <label for="phoneInput" class="form-label">Telefone</label>
+                    <input type="number" formControlName="phone" class="form-control">
+
+                    <label for="passwordInput" class="form-label">Senha</label>
+                    <input type="password" formControlName="password" class="form-control">
+                </form>
+            </div>
+
+
+            <div class="card-footer">
+                <button class="btn btn-success" (click)="submitRegisterForm()">Cadastrar</button>
+            </div>
+        </div>
+    </form>
+</div>
