--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <div>
-            <a class="navbar-brand" routerLink="client">BanTADS</a>
+            <a class="navbar-brand" routerLink="">BanTADS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -16,8 +16,8 @@
                             Meu Perfil
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="nav-link">Meus Dados</a></li>
-                            <li><a class="nav-link">AreaAdmin</a></li>
+                            <li><a class="nav-link">opcao01</a></li>
+                            <li><a class="nav-link">opcao02</a></li>
                             <li><a class="nav-link">Logout</a></li>
                         </ul>
                     </div>
