--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -7,46 +7,70 @@
             
             
             <div class="card-body">
-                <form [formGroup]="registerForm" action="#" method="post" id="loginForm">
+                <form action="#" method="post" id="loginForm">
                     <label for="nameInput" class="form-label">Nome</label>
-                    <input type="text" formControlName="name" class="form-control">
+                    <input type="text" formControlName="name" class="form-control"
+                    [(ngModel)]="client.nome"
+                    required
+                    >
 
                     <label for="emailInput" class="form-label">Email</label>
-                    <input type="email" formControlName="email" class="form-control">
+                    <input type="email" formControlName="email" class="form-control"
+                    [(ngModel)]="client.email"
+                    required
+                    >
 
                     <label for="cpfInput" class="form-label">CPF</label>
-                    <input type="text" formControlName="cpf" class="form-control">
+                    <input type="text" formControlName="cpf" class="form-control"
+                    [(ngModel)]="client.cpf"
+                    required
+                    >
 
                     <label for="enderecoInput" class="form-label">Endereço</label>
-                    <input type="text" formControlName="address" class="form-control">
+                    <input type="text" formControlName="address" class="form-control"
+                    [(ngModel)]="address.endereco"
+                    required
+                    >
+
+                    <label for="typeInput" class="form-label">Tipo</label>
+                    <input type="text" formControlName="type" class="form-control"
+                    placeholder="Rua ou Avenida"
+                    [(ngModel)]="address.tipo"
+                    required
+                    >
                     <div>
-                        <label for="tipo" class="form-label">Tipo:</label>
-                        <select id="tipo" name="tipo" class="form-control"> 
-                            <option value="rua">Rua</option>
-                            <option value="avenida">Avenida</option>
-                            <option value="estrada">Estrada</option>
-                        </select>
+                        <label for="logradouro">Logradouro</label>
+                        <input type="text" formControlName="logradouro" class="form-control"
+                        [(ngModel)]="address.logradouro"
+                        >
                     </div>
                     <div>
-                        <label for="logradouro">Logradouro:</label>
-                        <input type="text" formControlName="logradouro" class="form-control">
-                    </div>
-                    <div>
-                        <label for="numero">Número:</label>
-                        <input type="number" formControlName="numberHome" class="form-control">
+                        <label for="numero">Número</label>
+                        <input type="number" formControlName="numberHome" class="form-control"
+                        [(ngModel)]="address.numero"
+                        >
                     </div>
 
                     <label for="phoneInput" class="form-label">Telefone</label>
-                    <input type="number" formControlName="phone" class="form-control">
+                    <input type="number" formControlName="phone" class="form-control"
+                    [(ngModel)]="client.telefone"
+                    >
+
+                    <label for="salaryInput" class="form-label">Salario</label>
+                    <input type="number" formControlName="salary" class="form-control"
+                    [(ngModel)]="client.salario"
+                    >
 
                     <label for="passwordInput" class="form-label">Senha</label>
-                    <input type="password" formControlName="password" class="form-control">
+                    <input type="password" formControlName="password" class="form-control"
+                    [(ngModel)]="client.senha"
+                    >
                 </form>
             </div>
 
 
             <div class="card-footer">
-                <button class="btn btn-success" (click)="submitRegisterForm()">Cadastrar</button>
+                <button class="btn btn-success" (click)="submitRegister()">Cadastrar</button>
             </div>
         </div>
     </form>
