--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -1,77 +1,87 @@
-<div>
-    <form action="" method="post">
-        <div class="card">
-            <div class="card-header">
-                <h3>Cadastro de Cliente</h3>
-            </div>
-            
-            
-            <div class="card-body">
-                <form action="#" method="post" id="loginForm">
-                    <label for="nameInput" class="form-label">Nome</label>
-                    <input type="text" formControlName="name" class="form-control"
-                    [(ngModel)]="client.nome"
-                    required
-                    >
+<div class="container">
 
-                    <label for="emailInput" class="form-label">Email</label>
-                    <input type="email" formControlName="email" class="form-control"
-                    [(ngModel)]="client.email"
-                    required
-                    >
+    <div class="left-cadastro">
+        <img class="logo-cadastro" src="../../../assets/bantads-img.png" />
+        <h1 class="text-cadastro">Venha fazer parte do Internet banking do TADS</h1>
 
-                    <label for="cpfInput" class="form-label">CPF</label>
-                    <input type="text" formControlName="cpf" class="form-control"
-                    [(ngModel)]="client.cpf"
-                    required
-                    >
+    </div>
 
-                    <label for="enderecoInput" class="form-label">Endereço</label>
-                    <input type="text" formControlName="address" class="form-control"
-                    [(ngModel)]="address.endereco"
-                    required
-                    >
 
-                    <label for="typeInput" class="form-label">Tipo</label>
-                    <input type="text" formControlName="type" class="form-control"
-                    placeholder="Rua ou Avenida"
-                    [(ngModel)]="address.tipo"
-                    required
-                    >
-                    <div>
-                        <label for="logradouro">Logradouro</label>
-                        <input type="text" formControlName="logradouro" class="form-control"
-                        [(ngModel)]="address.logradouro"
+    <div class="right-cadastro">
+        <form action="" method="post">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Cadastro de Cliente</h3>
+                </div>
+                
+                
+                <div class="card-body">
+                    <form action="#" method="post" id="loginForm">
+                        <label for="nameInput" class="form-label">Nome</label>
+                        <input type="text" formControlName="name" class="form-control"
+                        [(ngModel)]="client.nome"
+                        required
                         >
-                    </div>
-                    <div>
-                        <label for="numero">Número</label>
-                        <input type="number" formControlName="numberHome" class="form-control"
-                        [(ngModel)]="address.numero"
+    
+                        <label for="emailInput" class="form-label">Email</label>
+                        <input type="email" formControlName="email" class="form-control"
+                        [(ngModel)]="client.email"
+                        required
                         >
-                    </div>
-
-                    <label for="phoneInput" class="form-label">Telefone</label>
-                    <input type="number" formControlName="phone" class="form-control"
-                    [(ngModel)]="client.telefone"
-                    >
-
-                    <label for="salaryInput" class="form-label">Salario</label>
-                    <input type="number" formControlName="salary" class="form-control"
-                    [(ngModel)]="client.salario"
-                    >
-
-                    <label for="passwordInput" class="form-label">Senha</label>
-                    <input type="password" formControlName="password" class="form-control"
-                    [(ngModel)]="client.senha"
-                    >
-                </form>
+    
+                        <label for="cpfInput" class="form-label">CPF</label>
+                        <input type="text" formControlName="cpf" class="form-control"
+                        [(ngModel)]="client.cpf"
+                        required
+                        >
+    
+                        <label for="enderecoInput" class="form-label">Endereço</label>
+                        <input type="text" formControlName="address" class="form-control"
+                        [(ngModel)]="address.endereco"
+                        required
+                        >
+    
+                        <label for="typeInput" class="form-label">Tipo</label>
+                        <input type="text" formControlName="type" class="form-control"
+                        placeholder="Rua ou Avenida"
+                        [(ngModel)]="address.tipo"
+                        required
+                        >
+                        <div>
+                            <label for="logradouro">Logradouro</label>
+                            <input type="text" formControlName="logradouro" class="form-control"
+                            [(ngModel)]="address.logradouro"
+                            >
+                        </div>
+                        <div>
+                            <label for="numero">Número</label>
+                            <input type="number" formControlName="numberHome" class="form-control"
+                            [(ngModel)]="address.numero"
+                            >
+                        </div>
+    
+                        <label for="phoneInput" class="form-label">Telefone</label>
+                        <input type="number" formControlName="phone" class="form-control"
+                        [(ngModel)]="client.telefone"
+                        >
+    
+                        <label for="salaryInput" class="form-label">Salario</label>
+                        <input type="number" formControlName="salary" class="form-control"
+                        [(ngModel)]="client.salario"
+                        >
+    
+                        <label for="passwordInput" class="form-label">Senha</label>
+                        <input type="password" formControlName="password" class="form-control"
+                        [(ngModel)]="client.senha"
+                        >
+                    </form>
+                </div>
+    
+    
+                <div class="card-footer">
+                    <button class="btn btn-success" (click)="submitRegister()">Cadastrar</button>
+                </div>
             </div>
-
-
-            <div class="card-footer">
-                <button class="btn btn-success" (click)="submitRegister()">Cadastrar</button>
-            </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
