Adição dos componentes na tela inicial do cliente

--- a/src/app/components/Cliente/tela-inicial/tela-inicial.component.html
+++ b/src/app/components/Cliente/tela-inicial/tela-inicial.component.html
@@ -1,1 +1,22 @@
-<p>Aqui será a tela home</p>
+<header>
+    <h1>Bem-vindo ao Bantads</h1>
+</header>
+<section>
+    <h2>Seu Saldo</h2>
+    <p id="saldo">R$ 0,00</p>
+</section>
+<section>
+    <h2>Transações Futuras</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Data</th>
+                <th>Descrição</th>
+                <th>Valor</th>
+            </tr>
+        </thead>
+        <tbody id="transacoes-futuras">
+            <!-- As transações serão inseridas aqui -->
+        </tbody>
+    </table>
+</section>
