--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -1,102 +1,103 @@
-<div class="container">
+<div id="cadastro" class="container">
 
-    <div class="left-cadastro">
-        <img class="logo-cadastro" src="../../../assets/bantads-img.png" />
-        <h1 class="text-cadastro">Venha fazer parte do Internet banking do TADS</h1>
+    <!--Logo-->
+    <h1 class="col-12"><img src="../../../assets/icon.png" alt="icon">anTads</h1>
+    <!--Titulo-->
+    <h2>Cadastro</h2>
 
-    </div>
+    <!--formulario-->
+    <form class="row" action="../../cliente/tela-inicial-cliente/tela-inicial-cliente.html" method="post">    
+        <!--Nome-->
+        <div class="form-group col-6">
+            <label>Nome</label>
+            <input type="text" class="form-control" placeholder="Nome" required>
+        </div>
 
+        <!--CPF-->
+        <div class="form-group col-6">
+            <label>CPF</label>
+            <input type="text" class="form-control" placeholder="CPF" required>
+        </div>
 
-    <div class="right-cadastro">
-        <form action="" method="post">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Cadastro de Cliente</h3>
-                </div>
-                
-                
-                <div class="card-body">
-                    <form action="#" method="post" id="loginForm">
-                        <label for="nameInput" class="form-label">Nome</label>
-                        <input type="text" class="form-control" 
-                        name="nome"
-                        [(ngModel)]="client.nome"
-                        required
-                        >
-    
-                        <label for="emailInput" class="form-label">Email</label>
-                        <input type="email" class="form-control"
-                        name="email"
-                        [(ngModel)]="client.email"
-                        required
-                        >
-    
-                        <label for="cpfInput" class="form-label">CPF</label>
-                        <input type="text" class="form-control"
-                        name="cpf"
-                        [(ngModel)]="client.cpf"
-                        required
-                        >
+        <!--Email-->
+        <div class="form-group col-6">
+            <label>Email</label>
+            <input type="email" class="form-control" placeholder="Email" required>
+        </div>
+        
+        <!--Telefone-->
+        <div class="form-group col-6">
+            <label>Telefone</label>
+            <input type="text" class="form-control" placeholder="Telefone" required>
+        </div>
 
-                        <!-- testando Endereco apenas como atributo de Cliente e não um objeto -->
-                        <label for="cidadeInput" class="form-label">Cidade</label>
-                        <input type="text" class="form-control"
-                        name="cidade"
-                        [(ngModel)]="address.cidade" 
-                        required
-                        >
+        <!--Endereço-->
+        <div class="form-group col-6">
+            <label for="inputState">Tipo</label>
+            <select id="inputState" class="form-control">
+                <option selected>Rua</option>
+                <option>Avenida</option>
+                <option>outros...</option>
+            </select>
+        </div>
 
-                        <label for="enderecoInput" class="form-label">Endereço</label>
-                        <input type="text" class="form-control"
-                        name="endereco"
-                        [(ngModel)]="address.endereco" 
-                        required
-                        >
-                        
-                        <label for="typeInput" class="form-label">Tipo</label>
-                        <input type="text" class="form-control"
-                        placeholder="Rua ou Avenida"
-                        [(ngModel)]="address.tipo"
-                        required
-                        >
-                        <div>
-                            <label for="logradouro">Logradouro</label>
-                            <input type="text" class="form-control"
-                            [(ngModel)]="address.logradouro"
-                            >
-                        </div>
-                        <div>
-                            <label for="numero">Número</label>
-                            <input type="number" class="form-control"
-                            [(ngModel)]="address.numero"
-                            >
-                        </div>
+        <!--Logadouro-->
+        <div class="form-group col-6">
+            <label>Logadouro</label>
+            <input type="text" class="form-control" placeholder="Logadouro" required>
+        </div>
+
+        <!--Número-->
+        <div class="form-group col-6">
+            <label>Número</label>
+            <input type="number" class="form-control" placeholder="Número" required>
+        </div>
+
+        <!--Complemento-->
+        <div class="form-group col-6">
+            <label>Complemento</label>
+            <input type="text" class="form-control" placeholder="Complemento" required>
+        </div>
+
+        <!--CEP-->
+        <div class="form-group col-6">
+            <label>CEP</label>
+            <input type="text" class="form-control" placeholder="CEP" required>
+        </div>
+
+        <!--Estado-->
+        <div class="form-group col-2">
+            <label>Estado</label>
+            <input type="text" class="form-control" placeholder="Estado" required>
+        </div>
+
+        <!--Cidade-->
+        <div class="form-group col-4">
+            <label>Cidade</label>
+            <input type="text" class="form-control" placeholder="Cidade" required>
+        </div>
+
+        <!--Saldo-->
+        <div class="form-group col-6">
+            <label>Saldo</label>
+            <input type="number" class="form-control" placeholder="R$" required>
+        </div>
+
+        <!--Senha-->
+        <div class="form-group col-6">
+            <label>Senha</label>
+            <input type="password" class="form-control" placeholder="Senha" required>
+        </div>
+
+        <!--Cadastrar-->
+        <div class="form-group col-2">
+            <a href="../../cliente/tela-inicial-cliente/tela-inicial-cliente.html"><button type="submit" class="btn btn-primary">Cadastrar</button></a>
+        </div>
+        
+        <!--Cancelar-->
+        <div class="form-group col-2">
+            <a href="../login/login.html"><button type="button"  class="btn btn-outline-secondary">Cancelar</button></a>
+        </div>
+    </form>
     
-                        <label for="phoneInput" class="form-label">Telefone</label>
-                        <input type="number" class="form-control"
-                        name="telefone"
-                        [(ngModel)]="client.telefone"
-                        >
-    
-                        <label for="salaryInput" class="form-label">Salario</label>
-                        <input type="number" class="form-control"
-                        name="salario"
-                        [(ngModel)]="client.salario"
-                        >
-    
-                        <label for="passwordInput" class="form-label">Senha</label>
-                        <input type="password" class="form-control"
-                        name="senha"
-                        [(ngModel)]="client.senha"
-                        >
-                    </form>
-                </div>
-    
-    
-                <div class="card-footer">
-                    <button class="btn btn-success" (click)="submitRegister()" type="button">Cadastrar</button>
-                </div>
-            </div>
-        </form>
-    </div>
 </div>
