--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -1,34 +1,46 @@
 <div id="cadastro" class="container">
 
     <!--Logo-->
-    <h1 class="col-12"><img src="../../../assets/icon.png" alt="icon">anTads</h1>
+    <h1 class="col-12"><img src="../../../assets/icon.png" alt="icon">BanTads</h1>
     <!--Titulo-->
     <h2>Cadastro</h2>
 
     <!--formulario-->
-    <form class="row" action="../../cliente/tela-inicial-cliente/tela-inicial-cliente.html" method="post">    
+    <form class="row" action="" method="post">    
         <!--Nome-->
         <div class="form-group col-6">
             <label>Nome</label>
-            <input type="text" class="form-control" placeholder="Nome" required>
+            <input type="text" class="form-control" placeholder="Nome"
+            name="nome"
+            [(ngModel)]="client.nome"
+            required>
         </div>
 
         <!--CPF-->
         <div class="form-group col-6">
             <label>CPF</label>
-            <input type="text" class="form-control" placeholder="CPF" required>
+            <input type="text" class="form-control" placeholder="CPF" 
+            name="cpf"
+            [(ngModel)]="client.cpf"
+            required>
         </div>
 
         <!--Email-->
         <div class="form-group col-6">
             <label>Email</label>
-            <input type="email" class="form-control" placeholder="Email" required>
+            <input type="email" class="form-control" placeholder="Email" 
+            name="email"
+            [(ngModel)]="client.email"
+            required>
         </div>
         
         <!--Telefone-->
         <div class="form-group col-6">
             <label>Telefone</label>
-            <input type="text" class="form-control" placeholder="Telefone" required>
+            <input type="text" class="form-control" placeholder="Telefone" 
+            name="telefone"
+            [(ngModel)]="client.telefone"
+            required>
         </div>
 
         <!--Endereço-->
@@ -44,59 +56,83 @@
         <!--Logadouro-->
         <div class="form-group col-6">
             <label>Logadouro</label>
-            <input type="text" class="form-control" placeholder="Logadouro" required>
+            <input type="text" class="form-control" placeholder="Logadouro" 
+            name="logradouro"
+            [(ngModel)]="address.logradouro"
+            required>
         </div>
 
         <!--Número-->
         <div class="form-group col-6">
             <label>Número</label>
-            <input type="number" class="form-control" placeholder="Número" required>
+            <input type="number" class="form-control" placeholder="Número" 
+            name="numero"
+            [(ngModel)]="address.numero"
+            required>
         </div>
 
         <!--Complemento-->
         <div class="form-group col-6">
             <label>Complemento</label>
-            <input type="text" class="form-control" placeholder="Complemento" required>
+            <input type="text" class="form-control" placeholder="Complemento" 
+            name="complemento"
+            [(ngModel)]="address.complemento"
+            required>
         </div>
 
         <!--CEP-->
         <div class="form-group col-6">
             <label>CEP</label>
-            <input type="text" class="form-control" placeholder="CEP" required>
+            <input type="text" class="form-control" placeholder="CEP" 
+            name="cep"
+            [(ngModel)]="address.CEP"
+            required>
         </div>
 
         <!--Estado-->
         <div class="form-group col-2">
             <label>Estado</label>
-            <input type="text" class="form-control" placeholder="Estado" required>
+            <input type="text" class="form-control" placeholder="Estado" 
+            name="estado"
+            [(ngModel)]="address.estado"
+            required>
         </div>
 
         <!--Cidade-->
         <div class="form-group col-4">
             <label>Cidade</label>
-            <input type="text" class="form-control" placeholder="Cidade" required>
+            <input type="text" class="form-control" placeholder="Cidade" 
+            name="cidade"
+            [(ngModel)]="address.cidade"
+            required>
         </div>
 
-        <!--Saldo-->
+        <!--Salario-->
         <div class="form-group col-6">
-            <label>Saldo</label>
-            <input type="number" class="form-control" placeholder="R$" required>
+            <label>Salario</label>
+            <input type="number" class="form-control" placeholder="R$" 
+            name="Salario"
+            [(ngModel)]="client.salario"
+            required>
         </div>
 
         <!--Senha-->
         <div class="form-group col-6">
             <label>Senha</label>
-            <input type="password" class="form-control" placeholder="Senha" required>
+            <input type="password" class="form-control" placeholder="Senha" 
+            name="senha"
+            [(ngModel)]="client.senha"
+            required>
         </div>
 
         <!--Cadastrar-->
-        <div class="form-group col-2">
-            <a href="../../cliente/tela-inicial-cliente/tela-inicial-cliente.html"><button type="submit" class="btn btn-primary">Cadastrar</button></a>
+        <div class="form-group col-2">    
+            <button type="button" class="btn btn-primary" (click)="submitRegister()">Cadastrar</button>
         </div>
         
         <!--Cancelar-->
         <div class="form-group col-2">
-            <a href="../login/login.html"><button type="button"  class="btn btn-outline-secondary">Cancelar</button></a>
+            <a href="#" [routerLink]="['/login']"><button type="button" class="btn btn-outline-secondary">Cancelar</button></a>
         </div>
     </form>
     
