remover menu global

--- a/src/app/autenticacao/autocadastro/autocadastro.component.html
+++ b/src/app/autenticacao/autocadastro/autocadastro.component.html
@@ -1,7 +1,7 @@
 <div id="cadastro" class="container">
 
     <!--Logo-->
-    <h1 class="col-12"><img src="../../../assets/icon.png" alt="icon">BanTads</h1>
+    <h1 class="col-12"><img src="../../../assets/icon.png" alt="icon">anTads</h1>
     <!--Titulo-->
     <h2>Cadastro</h2>
 
