--- a/src/app/components/Cliente/menu/menu.component.html
+++ b/src/app/components/Cliente/menu/menu.component.html
@@ -2,22 +2,22 @@
         
     <ul class="navbar-nav mr-auto ms-3">
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/home">Home</a>
+            <a class="nav-link" href="#" routerLink="/paginainicial">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/alterar">Alterar</a>
+            <a class="nav-link" href="#" routerLink="/login">Alterar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/depositar">Depositar</a>
+            <a class="nav-link" href="#" routerLink="/login">Depositar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/saque">Sacar</a>
+            <a class="nav-link" href="#" routerLink="/login">Sacar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/transferencia">Transferir</a>
+            <a class="nav-link" href="#" routerLink="/login">Transferir</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" routerLink="/cliente/extrato">Extrato</a>
+            <a class="nav-link" href="#" routerLink="/login">Extrato</a>
           </li>
         </ul>
   
