--- a/src/app/autenticacao/login/login.component.css
+++ b/src/app/autenticacao/login/login.component.css
@@ -2,6 +2,7 @@
     background-color: rgba(240, 248, 255, 0.882);
     border-radius: 20px;
     width: 600px;
+    margin-top: 200px;
 }
 
 /*imagem de login (inicio)*/
